crates/sui-kv-rpc/src/v2/snapshots/sui_kv_rpc__v2__pin_tests__walk__checkpoints__limit3_desc.snap
---
source: crates/sui-kv-rpc/src/v2/pin_tests.rs
expression: transcript
---
== page 0 ==
#0 item cp=4 | wm.cursor=item(cp=4) wm.cp=4 | end=-
#1 item cp=3 | wm.cursor=item(cp=3) wm.cp=3 | end=-
#2 item cp=2 | wm.cursor=item(cp=2) wm.cp=2 | end=QUERY_END_REASON_ITEM_LIMIT

== page 1 ==
#0 item cp=1 | wm.cursor=item(cp=1) wm.cp=1 | end=-
#1 item cp=0 | wm.cursor=item(cp=0) wm.cp=0 | end=-
#2 no-item | wm.cursor=boundary(cp=0) wm.cp=0 | end=QUERY_END_REASON_CHECKPOINT_BOUND
